# rpg-assistant

./: .env.example  .gitignore  AGENTS.md  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
.cursor/: environment.json  mcp.json
.cursor/rules/: angular-20.mdc  rpg-ingestion-mcp.mdc
.cursor/scripts/: capture-campaign-import.mjs  capture-pdf-viewer.mjs  capture-verification.sh  clojure-import-momie.sh  cloud-agent-install.sh  compare-stat-blocks-all-campaigns.py  compare-stat-blocks-page15.py  dev-stack.sh  free-port.sh  launch-app.sh  seed-campaigns.sh
apps/web/: README.md  angular.json  package.json  playwright.config.ts
docs/: plan-clojure-ingestion-full.md  plan-extractor-compare.md  plan-frontend-campaign-import.md  plan-layout-viewer.md  plan-pdfbox-list-bullets.md  plan-stat-blocks-croissez-completude.md  plan-stat-blocks-page15-momie.md  product-vision.md  roadmap-implem.md  technical-ingestion.md
docs/prompts/: implement-frontend-campaign-import.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_page_raw_layout.py  003_drop_chunk_token_count.py
scripts/: audit_cof2_campaign.py  audit_cof2_ingestion.py  demo_pass2_sections.py  llm_curated_ingest.py  manual_ingestion_analysis.py  seed_e2e_db.py
src/rpg_assistant/: __init__.py
tests/: test_api.py  test_api_imports.py  test_block_merging.py  test_campaign_discovery.py  test_chunk_id_isolation.py  test_chunking.py  test_clojure_import.py  test_cof2_audit_chunking.py  test_cof2_audit_extra_campaigns.py  test_cof2_audit_sections.py  test_cof2_audit_stat_blocks.py  test_coverage.py  test_demo_seed.py  test_docling_convert.py  test_docling_pipeline.py  test_docling_vs_legacy.py  test_extraction_provider.py  test_extractor_benchmark.py  test_extractor_compare_api.py  test_extractor_compare_ingest.py  test_faelys_conclusions.py  test_faelys_intro_layout.py  test_faelys_page8_hooks.py  test_filtering.py  test_intro_layout.py  test_layout.py  test_mondanites_chunking.py  test_page8_layout.py  test_pymupdf4llm_extractor.py  test_pymupdf4llm_pipeline.py  test_raw_layout.py  test_real_pdf_benchmark.py  test_reflow_chunk_text.py  test_rendering.py  test_sections.py  test_stat_blocks_cof2.py  test_stat_blocks_query.py  test_validator.py  test_visual_review.py
tests/acceptance/: __init__.py  conftest.py  test_web_exploration.py
tests/e2e/: serve.py
tests/fixtures/: cof2_audit_expectations.py  db.py  layout.py  (+8 more)
web/: README.md  angular.json  deps.edn  index.html  package-lock.json  package.json  playwright.config.ts  shadow-cljs.edn  vite.config.ts
web-cljs/: .gitignore  README.md  deps.edn  package-lock.json  package.json  shadow-cljs.edn
(+234 files in other folders)
