[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg-assistant"
version = "0.1.0"
description = "Campaign PDF ingestion with deterministic raw extraction and MCP semantic layer"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "psycopg[binary]>=3.1",
    "pydantic>=2.5",
    "mcp>=1.0",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "tiktoken>=0.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-playwright>=0.6",
]

[project.scripts]
rpg-ingest = "rpg_assistant.cli.ingest:main"
rpg-assistant-mcp = "rpg_assistant.mcp.server:main"
rpg-web = "rpg_assistant.api.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
