[project]
name = "rpg-assistant"
version = "0.1.0"
description = "Campaign PDF ingestion with deterministic raw extraction and MCP semantic layer"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "alembic>=1.13",
    "rpg-core",
    "rpg-ingest",
    "rpg-mcp",
    "rpg-api",
]

[tool.uv.sources]
rpg-core = { workspace = true }
rpg-ingest = { workspace = true }
rpg-mcp = { workspace = true }
rpg-api = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "packages/core/src",
    "packages/ingest/src",
    "packages/mcp/src",
    "packages/api/src",
]
